[package]
name = "s3minder"
version = "0.1.0"
authors = ["My Name <mehmetcodes@gmail.com>"]
edition = '2018'

[dependencies]
rusoto_core = "0.45"
rusoto_s3 = "0.45.0"
rusoto_dynamodb = "0.45.0"
rusoto_credential = "0.45.0"
tokio = { version = "0.2", features = ["full"] }
clap = "2"
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4" 
handlebars = "3.5"
serde_json = "*"
tokio-util =  { version = "0.2", features = ["codec"] }
futures-util = "0.3.1"
bytes = "0.5.3"
futures = "0.3.1"
csv = "1.1"
serde_derive = "*"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4.19"

[dev-dependencies]
actix-rt = "*"
